--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
       <img src="https://img.icons8.com/ios-filled/50/ffcc00/tv.png" alt="TV Android" />
       <p>TV Android</p>
     </div>
-    <div>
-      <img src="https://img.icons8.com/ios-filled/50/ffcc00/playstation.png" alt="PlayStation" />
-      <p>PlayStation</p>
-    </div>
+   <div>
+  <!-- Ícone removido -->
+  PlayStation
+</div>
   </section>
 
   <section class="benefits" aria-label="Benefícios">
@@ -220,4 +220,5 @@
 </script>
 
 </body>
+
 </html>
