--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <div class="container">
   <header>
-    <h1>Desfrute de toda a nostalgia da sua infância</h1>
+    <h1>DESFRUTE DE TODA A NOSTALGIA DA SUA INFANCIA</h1>
     <p>Mais de 10 mil jogos clássicos disponíveis para você jogar em qualquer dispositivo.</p>
     <a href="#comprar" class="btn-primary">Quero 10 Mil Jogos</a>
   </header>
@@ -221,4 +221,5 @@
 </body>
 
 </html>
+
 
